# internship

./: .gitignore  LICENSE  README.md  Trees.ipynb  config_template.toml  data.py  pyproject.toml
documents/log/: log.tex  title_page.tex
documents/log/chapters/: week1.tex  week2.tex  week3.tex  week4.tex  week5.tex
documents/log/tables/: fisher.tex  norm.tex
documents/pva/: pva.tex  title_page.tex
documents/pva/chapters/: introduction.tex  methods.tex  organisation.tex  plan.tex
documents/report/: refs.bib  report.tex  title_page.tex
documents/report/chapters/: abbreviations.tex  abstract.tex  appendix.tex  discussion_conclusion.tex  foreword.tex  introduction.tex  methods.tex  organisation.tex  results.tex
documents/report/figures/: cfgsl.tex  cfgss.tex  ctgss.tex  glmnet_conv.tex  glmnet_conv_reg.tex
documents/report/tables/: cforest_best_metrics.tex  cforest_gs.tex  cforest_gs_large.tex  cforest_params.tex  cforest_params_large.tex  ctree_gs.tex  ctree_params.tex  glmnet_conv_reg.tex  python_packages.tex  r_packages.tex
eda/: data.py
ml/: cforest.py  ctree.py  data.py  dennis_glmnet_example.R  glm.py  model.py  tree.py
notebooks/: GLMNET.ipynb  Trees.ipynb  cforest.ipynb  ctree.ipynb  datasets.ipynb  glmnet.ipynb  miscellaneous_plots.ipynb  post_fit_actual.ipynb
notebooks/subset_sorted/: perf_varimp_ma10.ipynb  perf_varimp_ma15.ipynb  perf_varimp_ma5.ipynb  perf_varimp_tcga10.ipynb  perf_varimp_tcga15.ipynb  perf_varimp_tcga5.ipynb
src/: README.md  data.py  log_manager.py  log_parser.py
src/ml/: cforest.py  ctree.py  glm.py  model.py
(+6 files in other folders)
