[tool.poetry]
name = "internship"
version = "0.1.0"
description = "Code and writings for my internship project at the Computational Transcriptomics research group at University Medical Center Groningen."
authors = ["denniswiersma <dennis.wiersma@icloud.com>"]
readme = "README.md"
packages = [{include = "src"}]
repository = "https://github.com/denniswiersma/internship"
keywords = ["python", "machine-learning", "transcriptomics", "rpy2", "glmnet", "partykit"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.3"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
rpy2 = "^3.5.14"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
